fix(dropdown): arrow navigation, disable mode, z-index  and styling
* fix: close dropdown when clicking on it

* fix: changed z-index on dropdown

* fix: add dropdown hover and focus styling

* fix(dropdown): add arrow navigation functionality

* fix(dropdown): add underline when option selected

* fix(dropdown): change focus style and div to span

* fix(dropdown): Fix inside label bugs

* fix(dropdown): Fix disabled mode

* fix(dropdown): add focus styling to native select

* chore: list test by changing class name

* fix: corrected class name

* refactor: remove unused state

* fix: changed left side padding and placement of inside label after pr feedback

* style: change double quotes to singles, removed comment and console.log

* fix: remove tabindex and change styling for disabled

* fix: fix disable mode on filter variation

* fix(dropdown): add arrow navigation functionality

* fix(dropdown): add underline when option selected

* fix(dropdown): Fix disabled mode

* chore: list test by changing class name

* fix: corrected class name

* refactor: remove unused state

* fix: corrected filter focus behaviour

* fix(dropdown): corrected placing on inside label

--- a/components/src/components/dropdown/_dropdown-core.scss
+++ b/components/src/components/dropdown/_dropdown-core.scss
@@ -10,7 +10,7 @@ html {
 }
 
 @mixin dropdown-wrapper {
-  @include type-style('detail-02');
+  @include type-style("detail-02");
 
   color: var(--sdds-grey-958);
   display: flex;
@@ -33,7 +33,7 @@ html {
 
   &:focus {
     &::before {
-      content: ' ';
+      content: " ";
       position: absolute;
       z-index: 2;
       bottom: 0;
@@ -55,7 +55,7 @@ html {
 }
 
 .sdds-dropdown-helper {
-  @include type-style('detail-05');
+  @include type-style("detail-05");
 
   color: var(--sdds-grey-700);
   margin-top: var(--sdds-spacing-element-4);
@@ -70,13 +70,13 @@ html {
 }
 
 .sdds-dropdown-label-inside {
-  @include type-style('detail-07');
+  @include type-style("detail-07");
 
   color: var(--sdds-grey-700);
 }
 
 .sdds-dropdown-label-outside {
-  @include type-style('detail-05');
+  @include type-style("detail-05");
 
   color: var(--sdds-grey-958);
   position: absolute;
